<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addstory.FormAddStoryActivity">

    <ImageView
        android:id="@+id/form_photo_profile"
        android:contentDescription="@string/preview_profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/photo_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/button_camerax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/ic_baseline_camera_alt_24"
        android:text="@string/take_photo"
        app:layout_constraintTop_toBottomOf="@+id/form_photo_profile"
        app:layout_constraintEnd_toStartOf="@+id/button_gallery"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gallery"
        android:drawableEnd="@drawable/ic_gallery"
        app:layout_constraintStart_toEndOf="@+id/button_camerax"
        app:layout_constraintTop_toTopOf="@+id/button_camerax"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/enter_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"
        android:text="@string/enter_description"
        app:layout_constraintTop_toBottomOf="@+id/button_camerax"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/et_description"
        android:padding="8dp"
        android:background="@drawable/rounded_corners"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        android:layout_height="0dp"
        android:layout_width="0dp"
        android:layout_marginHorizontal="8dp"
        android:lines="5"
        android:scrollHorizontally="false"
        android:layout_marginVertical="8dp"
        app:layout_constraintTop_toBottomOf="@+id/enter_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_upload"
        />

    <Button
        android:id="@+id/button_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload"
        android:layout_marginBottom="8dp"
        app:layout_constraintTop_toBottomOf="@+id/et_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>